--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,17 @@
 
 body {
     background-color: beige;
-    
+    font-family: 'Poppins';
+}
+
+.btn {
+    background-image: linear-gradient(315deg, #eec0c6 0%, #e58c8a 74%);
+}
+
+.btn:hover{
+    background-image: linear-gradient(315deg, #eec0c6 0%, #d0706e 74%);
+}
+
+.btn:active{
+    background-image: linear-gradient(315deg, #c9a2a7 0%, #c87472 74%);
 }
